main/mt22/parser/MT22Parser.py
# Generated from main/mt22/parser/MT22.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class MT22Parser ( Parser ):

    grammarFileName = "MT22.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'auto'", "'break'", "'boolean'", "'do'", 
                     "'else'", "'false'", "'float'", "'for'", "'function'", 
                     "'if'", "'integer'", "'return'", "'string'", "'true'", 
                     "'while'", "'void'", "'out'", "'continue'", "'of'", 
                     "'inherit'", "'array'", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "'+'", "'-'", "'*'", "'/'", 
                     "'%'", "'!'", "'&&'", "'||'", "'=='", "'!='", "'<'", 
                     "'<='", "'>'", "'>='", "'::'", "'('", "')'", "'['", 
                     "']'", "'.'", "','", "';'", "':'", "'{'", "'}'", "'='" ]

    symbolicNames = [ "<INVALID>", "AUTO", "BREAK", "BOOLEAN", "DO", "ELSE", 
                      "FALSE", "FLOAT", "FOR", "FUNCTION", "IF", "INT", 
                      "RETURN", "STRING", "TRUE", "WHILE", "VOID", "OUT", 
                      "CONTINUE", "OF", "INHERIT", "ARRAY", "CommentC", 
                      "CommentCplus", "Integer", "Float", "Identifiers", 
                      "ADDOP", "MINUSOP", "MULOP", "DIVOP", "MODUOP", "NEGATION", 
                      "CONJUNCTION", "DISJUNCTION", "DOUEQ", "DIFF", "SMALLER", 
                      "SMAEQ", "GREATER", "GREEQ", "CONCAT", "LB", "RB", 
                      "LSB", "RSB", "DOT", "CM", "SM", "COLON", "LCB", "RCB", 
                      "EQ", "String", "WS", "ERROR_CHAR", "UNCLOSE_STRING", 
                      "ILLEGAL_ESCAPE" ]

    RULE_program = 0
    RULE_arrayliteral = 1
    RULE_arrayprime = 2
    RULE_arrayelements = 3
    RULE_arrayelement = 4
    RULE_arraytyp = 5
    RULE_arrayindexprime = 6
    RULE_arrayindexes = 7
    RULE_arrayindex = 8
    RULE_actomic = 9
    RULE_elementtype = 10
    RULE_decls = 11
    RULE_decl = 12
    RULE_vardecl = 13
    RULE_variablerecursive = 14
    RULE_nonvardecl = 15
    RULE_identifiersprime = 16
    RULE_identifierslist = 17
    RULE_identifiers = 18
    RULE_typ = 19
    RULE_exprlist = 20
    RULE_exprlements = 21
    RULE_expr = 22
    RULE_expr1 = 23
    RULE_expr2 = 24
    RULE_expr3 = 25
    RULE_expr4 = 26
    RULE_expr5 = 27
    RULE_expr6 = 28
    RULE_expr7 = 29
    RULE_expr8 = 30
    RULE_subexpr = 31
    RULE_indexop = 32
    RULE_funcdecl = 33
    RULE_funcproto = 34
    RULE_returntyp = 35
    RULE_subpart = 36
    RULE_funcbody = 37
    RULE_funccall = 38
    RULE_argumentprime = 39
    RULE_argumentlists = 40
    RULE_argumentlist = 41
    RULE_parameterlist = 42
    RULE_parameters = 43
    RULE_parameter = 44
    RULE_statement = 45
    RULE_assignmentstmt = 46
    RULE_lhs = 47
    RULE_scalar_variable = 48
    RULE_index_expression = 49
    RULE_ifstmt = 50
    RULE_false_statement = 51
    RULE_forstmt = 52
    RULE_init_expr = 53
    RULE_condition_expr = 54
    RULE_update_expr = 55
    RULE_whilestmt = 56
    RULE_expr_while = 57
    RULE_do_whilestmt = 58
    RULE_break_stmt = 59
    RULE_continuestmt = 60
    RULE_returnstmt = 61
    RULE_callstmt = 62
    RULE_block = 63
    RULE_block_stmtprime = 64
    RULE_block_stmts = 65
    RULE_block_stmt = 66
    RULE_statements = 67
    RULE_boolean = 68

    ruleNames =  [ "program", "arrayliteral", "arrayprime", "arrayelements", 
                   "arrayelement", "arraytyp", "arrayindexprime", "arrayindexes", 
                   "arrayindex", "actomic", "elementtype", "decls", "decl", 
                   "vardecl", "variablerecursive", "nonvardecl", "identifiersprime", 
                   "identifierslist", "identifiers", "typ", "exprlist", 
                   "exprlements", "expr", "expr1", "expr2", "expr3", "expr4", 
                   "expr5", "expr6", "expr7", "expr8", "subexpr", "indexop", 
                   "funcdecl", "funcproto", "returntyp", "subpart", "funcbody", 
                   "funccall", "argumentprime", "argumentlists", "argumentlist", 
                   "parameterlist", "parameters", "parameter", "statement", 
                   "assignmentstmt", "lhs", "scalar_variable", "index_expression", 
                   "ifstmt", "false_statement", "forstmt", "init_expr", 
                   "condition_expr", "update_expr", "whilestmt", "expr_while", 
                   "do_whilestmt", "break_stmt", "continuestmt", "returnstmt", 
                   "callstmt", "block", "block_stmtprime", "block_stmts", 
                   "block_stmt", "statements", "boolean" ]

    EOF = Token.EOF
    AUTO=1
    BREAK=2
    BOOLEAN=3
    DO=4
    ELSE=5
    FALSE=6
    FLOAT=7
    FOR=8
    FUNCTION=9
    IF=10
    INT=11
    RETURN=12
    STRING=13
    TRUE=14
    WHILE=15
    VOID=16
    OUT=17
    CONTINUE=18
    OF=19
    INHERIT=20
    ARRAY=21
    CommentC=22
    CommentCplus=23
    Integer=24
    Float=25
    Identifiers=26
    ADDOP=27
    MINUSOP=28
    MULOP=29
    DIVOP=30
    MODUOP=31
    NEGATION=32
    CONJUNCTION=33
    DISJUNCTION=34
    DOUEQ=35
    DIFF=36
    SMALLER=37
    SMAEQ=38
    GREATER=39
    GREEQ=40
    CONCAT=41
    LB=42
    RB=43
    LSB=44
    RSB=45
    DOT=46
    CM=47
    SM=48
    COLON=49
    LCB=50
    RCB=51
    EQ=52
    String=53
    WS=54
    ERROR_CHAR=55
    UNCLOSE_STRING=56
    ILLEGAL_ESCAPE=57

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def decls(self):
            return self.getTypedRuleContext(MT22Parser.DeclsContext,0)


        def EOF(self):
            return self.getToken(MT22Parser.EOF, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = MT22Parser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 138
            self.decls()
            self.state = 139
            self.match(MT22Parser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArrayliteralContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LCB(self):
            return self.getToken(MT22Parser.LCB, 0)

        def arrayprime(self):
            return self.getTypedRuleContext(MT22Parser.ArrayprimeContext,0)


        def RCB(self):
            return self.getToken(MT22Parser.RCB, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_arrayliteral

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArrayliteral" ):
                return visitor.visitArrayliteral(self)
            else:
                return visitor.visitChildren(self)




    def arrayliteral(self):

        localctx = MT22Parser.ArrayliteralContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_arrayliteral)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 141
            self.match(MT22Parser.LCB)
            self.state = 142
            self.arrayprime()
            self.state = 143
            self.match(MT22Parser.RCB)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArrayprimeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def arrayelements(self):
            return self.getTypedRuleContext(MT22Parser.ArrayelementsContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_arrayprime

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArrayprime" ):
                return visitor.visitArrayprime(self)
            else:
                return visitor.visitChildren(self)




    def arrayprime(self):

        localctx = MT22Parser.ArrayprimeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_arrayprime)
        try:
            self.state = 147
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MT22Parser.FALSE, MT22Parser.TRUE, MT22Parser.Integer, MT22Parser.Float, MT22Parser.Identifiers, MT22Parser.MINUSOP, MT22Parser.NEGATION, MT22Parser.LB, MT22Parser.LCB, MT22Parser.String]:
                self.enterOuterAlt(localctx, 1)
                self.state = 145
                self.arrayelements()
                pass
            elif token in [MT22Parser.RCB]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArrayelementsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def arrayelement(self):
            return self.getTypedRuleContext(MT22Parser.ArrayelementContext,0)


        def CM(self):
            return self.getToken(MT22Parser.CM, 0)

        def arrayelements(self):
            return self.getTypedRuleContext(MT22Parser.ArrayelementsContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_arrayelements

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArrayelements" ):
                return visitor.visitArrayelements(self)
            else:
                return visitor.visitChildren(self)




    def arrayelements(self):

        localctx = MT22Parser.ArrayelementsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_arrayelements)
        try:
            self.state = 154
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 149
                self.arrayelement()
                self.state = 150
                self.match(MT22Parser.CM)
                self.state = 151
                self.arrayelements()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 153
                self.arrayelement()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArrayelementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(MT22Parser.ExprContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_arrayelement

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArrayelement" ):
                return visitor.visitArrayelement(self)
            else:
                return visitor.visitChildren(self)




    def arrayelement(self):

        localctx = MT22Parser.ArrayelementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_arrayelement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 156
            self.expr()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArraytypContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ARRAY(self):
            return self.getToken(MT22Parser.ARRAY, 0)

        def LSB(self):
            return self.getToken(MT22Parser.LSB, 0)

        def arrayindexprime(self):
            return self.getTypedRuleContext(MT22Parser.ArrayindexprimeContext,0)


        def RSB(self):
            return self.getToken(MT22Parser.RSB, 0)

        def OF(self):
            return self.getToken(MT22Parser.OF, 0)

        def elementtype(self):
            return self.getTypedRuleContext(MT22Parser.ElementtypeContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_arraytyp

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArraytyp" ):
                return visitor.visitArraytyp(self)
            else:
                return visitor.visitChildren(self)




    def arraytyp(self):

        localctx = MT22Parser.ArraytypContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_arraytyp)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 158
            self.match(MT22Parser.ARRAY)
            self.state = 159
            self.match(MT22Parser.LSB)
            self.state = 160
            self.arrayindexprime()
            self.state = 161
            self.match(MT22Parser.RSB)
            self.state = 162
            self.match(MT22Parser.OF)
            self.state = 163
            self.elementtype()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArrayindexprimeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def arrayindexes(self):
            return self.getTypedRuleContext(MT22Parser.ArrayindexesContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_arrayindexprime

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArrayindexprime" ):
                return visitor.visitArrayindexprime(self)
            else:
                return visitor.visitChildren(self)




    def arrayindexprime(self):

        localctx = MT22Parser.ArrayindexprimeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_arrayindexprime)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 165
            self.arrayindexes()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArrayindexesContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def arrayindex(self):
            return self.getTypedRuleContext(MT22Parser.ArrayindexContext,0)


        def CM(self):
            return self.getToken(MT22Parser.CM, 0)

        def arrayindexes(self):
            return self.getTypedRuleContext(MT22Parser.ArrayindexesContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_arrayindexes

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArrayindexes" ):
                return visitor.visitArrayindexes(self)
            else:
                return visitor.visitChildren(self)




    def arrayindexes(self):

        localctx = MT22Parser.ArrayindexesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_arrayindexes)
        try:
            self.state = 172
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 167
                self.arrayindex()
                self.state = 168
                self.match(MT22Parser.CM)
                self.state = 169
                self.arrayindexes()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 171
                self.arrayindex()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArrayindexContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Integer(self):
            return self.getToken(MT22Parser.Integer, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_arrayindex

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArrayindex" ):
                return visitor.visitArrayindex(self)
            else:
                return visitor.visitChildren(self)




    def arrayindex(self):

        localctx = MT22Parser.ArrayindexContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_arrayindex)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 174
            self.match(MT22Parser.Integer)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ActomicContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT(self):
            return self.getToken(MT22Parser.INT, 0)

        def FLOAT(self):
            return self.getToken(MT22Parser.FLOAT, 0)

        def STRING(self):
            return self.getToken(MT22Parser.STRING, 0)

        def BOOLEAN(self):
            return self.getToken(MT22Parser.BOOLEAN, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_actomic

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitActomic" ):
                return visitor.visitActomic(self)
            else:
                return visitor.visitChildren(self)




    def actomic(self):

        localctx = MT22Parser.ActomicContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_actomic)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 176
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MT22Parser.BOOLEAN) | (1 << MT22Parser.FLOAT) | (1 << MT22Parser.INT) | (1 << MT22Parser.STRING))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ElementtypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def actomic(self):
            return self.getTypedRuleContext(MT22Parser.ActomicContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_elementtype

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitElementtype" ):
                return visitor.visitElementtype(self)
            else:
                return visitor.visitChildren(self)




    def elementtype(self):

        localctx = MT22Parser.ElementtypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_elementtype)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 178
            self.actomic()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def decl(self):
            return self.getTypedRuleContext(MT22Parser.DeclContext,0)


        def decls(self):
            return self.getTypedRuleContext(MT22Parser.DeclsContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_decls

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDecls" ):
                return visitor.visitDecls(self)
            else:
                return visitor.visitChildren(self)




    def decls(self):

        localctx = MT22Parser.DeclsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_decls)
        try:
            self.state = 184
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 180
                self.decl()
                self.state = 181
                self.decls()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 183
                self.decl()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def vardecl(self):
            return self.getTypedRuleContext(MT22Parser.VardeclContext,0)


        def funcdecl(self):
            return self.getTypedRuleContext(MT22Parser.FuncdeclContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_decl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDecl" ):
                return visitor.visitDecl(self)
            else:
                return visitor.visitChildren(self)




    def decl(self):

        localctx = MT22Parser.DeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_decl)
        try:
            self.state = 188
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 186
                self.vardecl()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 187
                self.funcdecl()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VardeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def variablerecursive(self):
            return self.getTypedRuleContext(MT22Parser.VariablerecursiveContext,0)


        def SM(self):
            return self.getToken(MT22Parser.SM, 0)

        def nonvardecl(self):
            return self.getTypedRuleContext(MT22Parser.NonvardeclContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_vardecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVardecl" ):
                return visitor.visitVardecl(self)
            else:
                return visitor.visitChildren(self)




    def vardecl(self):

        localctx = MT22Parser.VardeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_vardecl)
        try:
            self.state = 194
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 190
                self.variablerecursive()
                self.state = 191
                self.match(MT22Parser.SM)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 193
                self.nonvardecl()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VariablerecursiveContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Identifiers(self):
            return self.getToken(MT22Parser.Identifiers, 0)

        def CM(self, i:int=None):
            if i is None:
                return self.getTokens(MT22Parser.CM)
            else:
                return self.getToken(MT22Parser.CM, i)

        def variablerecursive(self):
            return self.getTypedRuleContext(MT22Parser.VariablerecursiveContext,0)


        def expr(self):
            return self.getTypedRuleContext(MT22Parser.ExprContext,0)


        def COLON(self):
            return self.getToken(MT22Parser.COLON, 0)

        def typ(self):
            return self.getTypedRuleContext(MT22Parser.TypContext,0)


        def EQ(self):
            return self.getToken(MT22Parser.EQ, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_variablerecursive

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVariablerecursive" ):
                return visitor.visitVariablerecursive(self)
            else:
                return visitor.visitChildren(self)




    def variablerecursive(self):
